--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             height="100">
         <img src="../HTML/img.gif" alt="" width="100" height="100">
         <h1>
-            <a href="0index.html">WEB</a>
+            <a href="index.html">WEB</a>
         </h1>
         <ol>
             <li>
