--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>
-            <a href="0index.html">WEB</a>
+            <a href="index.html">WEB</a>
         </h1>
         <ol>
             <li>
