--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             alt=""
             width="100"
             height="100">
-        <img src="../HTML/img.gif" alt="" width="100" height="100">
+        <img src="../img.gif" alt="" width="100" height="100">
         <h1>
             <a href="index.html">WEB</a>
         </h1>
